Fixed scrollbar issue.

--- a/src/containers/App/App.css
+++ b/src/containers/App/App.css
@@ -17,7 +17,7 @@
 }
 
 .App .content {
-    flex: 1;
+    width: 100%;
 }
 
 .App .flex {
