--- a/src/containers/Favourites/Favourites.css
+++ b/src/containers/Favourites/Favourites.css
@@ -17,7 +17,7 @@
 }
 
 .Favourites .noFavImage {
-    width: 50%;
+    width: 30%;
     margin-top: 10%;
 }
 
